introduced settings storage, using HTML5 localStorage. Altough now storing a value for "autoupdate", no implementation for automatic updates included yet.

--- a/partials/check.html
+++ b/partials/check.html
@@ -26,6 +26,6 @@
 
 <div ng-show="status==4">
     <p>You're now using {{ changed }} more .hiv-enabled bookmarks. Enjoy!</p>
-    <p><label><input type="checkbox" name="autoupdate"> for new .hiv sites, update my bookmarks automatically</label></p>
+    <p><label><input type="checkbox" name="autoupdate" ng-model="settings.autoupdate"> for new .hiv sites, update my bookmarks automatically</label></p>
 </div>
 
