--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -1,6 +1,7 @@
 <a class="btn btn-submit" href="#/check">Check My Bookmarks</a>
 <p>
-  Support the .hiv project by replacing your bookmarks with equivalent 
-  links that use .hiv. This way, you activate money for .hiv projects every
-  time you use them!
+    Support the .hiv project by replacing your bookmarks with equivalent 
+    links that use .hiv. This way, you activate money for .hiv projects every
+    time you use them!
 </p>
+<p><label><input type="checkbox" name="autoupdate" ng-model="settings.autoupdate" ng-value-true="1" ng-value-false="0"> for new .hiv sites, update my bookmarks automatically</label></p>
